<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/attention"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:text="@string/Attention"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/currentcustomers"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/attention"
        app:layout_constraintStart_toStartOf="@+id/attention"
        app:layout_constraintTop_toBottomOf="@+id/attention" />

    <Button
        android:id="@+id/resultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Result"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <TextView
        android:id="@+id/positiveResultText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/ok"
        android:textAlignment="center"
        android:textColor="#008806"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/resultButton"
        app:layout_constraintStart_toStartOf="@+id/resultButton"
        app:layout_constraintTop_toBottomOf="@+id/resultButton" />

    <TextView
        android:id="@+id/negativeResultText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/no"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/resultButton"
        app:layout_constraintStart_toStartOf="@+id/resultButton"
        app:layout_constraintTop_toBottomOf="@+id/resultButton" />

    <TextView
        android:id="@+id/difference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/positiveResultText"
        app:layout_constraintStart_toStartOf="@+id/positiveResultText"
        app:layout_constraintTop_toBottomOf="@+id/positiveResultText" />

</androidx.constraintlayout.widget.ConstraintLayout>